# Predicting-Car-Prices

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  export_model.py  pyproject.toml
app/: app.py
model/: car_price.model
notebook/: githublink.txt  st126235_Assignment_1.ipynb
